--- a/IndustrialPlacement/styles/slidy.css
+++ b/IndustrialPlacement/styles/slidy.css
@@ -9,8 +9,8 @@
 */
 body
 {
-  margin: 0 0 0 0;
-  padding: 0 0 0 0;
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
   color: black;
@@ -20,9 +20,11 @@ body
 }
 
 div.toolbar {
-  position: fixed; z-index: 200;
+  position: fixed;
+  z-index: 200;
   top: auto; bottom: 0; left: 0; right: 0;
-  height: 1.2em; text-align: right;
+  height: 1.2em;
+  text-align: right;
   padding-left: 1em;
   padding-right: 1em; 
   font-size: 60%;
