--- a/IndustrialPlacement/styles/w3c-blue.css
+++ b/IndustrialPlacement/styles/w3c-blue.css
@@ -279,7 +279,7 @@ ul li {
 
 ol li { 
   margin: 0.1em 0em 0.6em 1.5em;
-  padding: 0 0 0 0px;
+/*  padding: 0 0 0 0px; */
   line-height: 140%;
 }
 
