--- a/styles/w3c-blue.css
+++ b/styles/w3c-blue.css
@@ -270,7 +270,7 @@ ul li {
   list-style: none;
   margin: 0.1em 0em 0.6em 0;
   padding: 0 0 0 40px;
-  background: transparent url(../graphics/bullet.png) no-repeat 5px 0.3em;
+  background: transparent url(../img/bullet.png) no-repeat 5px 0.3em;
   line-height: 140%;
 }
 
@@ -323,65 +323,65 @@ ol.outline ol { list-style-type:lower-alpha }
 
 ol.outline li.nofold {
   padding: 0 0 0 20px;
-  background: transparent url(../graphics/nofold-dim.gif) no-repeat 0px 0.3em;
+  background: transparent url(../img/nofold-dim.gif) no-repeat 0px 0.3em;
 }
 ol.outline li.unfolded {
   padding: 0 0 0 20px;
-  background: transparent url(../graphics/fold-dim.gif) no-repeat 0px 0.3em;
+  background: transparent url(../img/fold-dim.gif) no-repeat 0px 0.3em;
 }
 ol.outline li.folded {
   padding: 0 0 0 20px;
-  background: transparent url(../graphics/unfold-dim.gif) no-repeat 0px 0.3em;
+  background: transparent url(../img/unfold-dim.gif) no-repeat 0px 0.3em;
 }
 ol.outline li.unfolded:hover {
   padding: 0 0 0 20px;
-  background: transparent url(../graphics/fold.gif) no-repeat 0px 0.3em;
+  background: transparent url(../img/fold.gif) no-repeat 0px 0.3em;
 }
 ol.outline li.folded:hover {
   padding: 0 0 0 20px;
-  background: transparent url(../graphics/unfold.gif) no-repeat 0px 0.3em;
+  background: transparent url(../img/unfold.gif) no-repeat 0px 0.3em;
 }
 
 ul.outline li.nofold {
   padding: 0 0 0 52px;
-  background: transparent url(../graphics/bullet-nofold-dim.gif) no-repeat 5px 0.3em;
+  background: transparent url(../img/bullet-nofold-dim.gif) no-repeat 5px 0.3em;
 }
 ul.outline li.unfolded {
   padding: 0 0 0 52px;
-  background: transparent url(../graphics/bullet-fold-dim.gif) no-repeat 5px 0.3em;
+  background: transparent url(../img/bullet-fold-dim.gif) no-repeat 5px 0.3em;
 }
 ul.outline li.folded {
   padding: 0 0 0 52px;
-  background: transparent url(../graphics/bullet-unfold-dim.gif) no-repeat 5px 0.3em;
+  background: transparent url(../img/bullet-unfold-dim.gif) no-repeat 5px 0.3em;
 }
 ul.outline li.unfolded:hover {
   padding: 0 0 0 52px;
-  background: transparent url(../graphics/bullet-fold.gif) no-repeat 5px 0.3em;
+  background: transparent url(../img/bullet-fold.gif) no-repeat 5px 0.3em;
 }
 ul.outline li.folded:hover {
   padding: 0 0 0 52px;
-  background: transparent url(../graphics/bullet-unfold.gif) no-repeat 5px 0.3em;
+  background: transparent url(../img/bullet-unfold.gif) no-repeat 5px 0.3em;
 }
 
 li ul.outline li.nofold {
   padding: 0 0 0 21px;
-  background: transparent url(../graphics/nofold-dim.gif) no-repeat 5px 0.3em;
+  background: transparent url(../img/nofold-dim.gif) no-repeat 5px 0.3em;
 }
 li ul.outline li.unfolded {
   padding: 0 0 0 21px;
-  background: transparent url(../graphics/fold-dim.gif) no-repeat 5px 0.3em;
+  background: transparent url(../img/fold-dim.gif) no-repeat 5px 0.3em;
 }
 li ul.outline li.folded {
   padding: 0 0 0 21px;
-  background: transparent url(../graphics/unfold-dim.gif) no-repeat 5px 0.3em;
+  background: transparent url(../img/unfold-dim.gif) no-repeat 5px 0.3em;
 }
 li ul.outline li.unfolded:hover {
   padding: 0 0 0 21px;
-  background: transparent url(../graphics/fold.gif) no-repeat 5px 0.3em;
+  background: transparent url(../img/fold.gif) no-repeat 5px 0.3em;
 }
 li ul.outline li.folded:hover {
   padding: 0 0 0 21px;
-  background: transparent url(../graphics/unfold.gif) no-repeat 5px 0.3em;
+  background: transparent url(../img/unfold.gif) no-repeat 5px 0.3em;
 }
 
 img.withBorder {
